Added many changes to styling elements, further testing

--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
     </head>
 
 <body>
+
 <div>
-
-<img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" class = "googleLogo" alt="Google" 
+    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" class = "googleLogo" alt="Google" 
 width="272" height="92">
-<input class="searchBar" type = "text">
-
 </div>
+
+
+<div>
+<input class="searchBar"  type = "text">
+</div>
+
+<div>
+    <input class = "searchButton" value= "Google Search" type="submit">
+    <input class = "lucky" value = "I'm feeling lucky" type="submit">
+</div>
+
+
 
 </body>
 
